Package_Tools/include-C/hdf5/serial/c/in_arbeit/h/H5Ppublic.h


typedef enum H5D_mpio_actual_chunk_opt_mode_t {
    H5D_MPIO_NO_CHUNK_OPTIMIZATION = 0,
    H5D_MPIO_LINK_CHUNK,
    H5D_MPIO_MULTI_CHUNK
} H5D_mpio_actual_chunk_opt_mode_t;
typedef enum H5D_mpio_actual_io_mode_t {
    H5D_MPIO_NO_COLLECTIVE = 0x0,
    H5D_MPIO_CHUNK_INDEPENDENT = 0x1,
    H5D_MPIO_CHUNK_COLLECTIVE = 0x2,
    H5D_MPIO_CHUNK_MIXED = 0x1 | 0x2,
    H5D_MPIO_CONTIGUOUS_COLLECTIVE = 0x4
} H5D_mpio_actual_io_mode_t;
extern herr_t H5Pset_meta_block_size(hid_t fapl_id, hsize_t size);
extern herr_t H5Pset_metadata_read_attempts(hid_t plist_id, unsigned attempts);
extern herr_t H5Pset_multi_type(hid_t fapl_id, H5FD_mem_t type);
extern herr_t H5Pset_object_flush_cb(hid_t plist_id, H5F_flush_cb_t func, void *udata);
extern herr_t H5Pset_sieve_buf_size(hid_t fapl_id, size_t size);
extern herr_t H5Pset_small_data_block_size(hid_t fapl_id, hsize_t size);
extern herr_t H5Pset_all_coll_metadata_ops(hid_t plist_id, hbool_t is_collective);
extern herr_t H5Pget_all_coll_metadata_ops(hid_t plist_id, hbool_t *is_collective);
extern herr_t H5Pset_coll_metadata_write(hid_t plist_id, hbool_t is_collective);
extern herr_t H5Pget_coll_metadata_write(hid_t plist_id, hbool_t *is_collective);
extern herr_t H5Pset_mdc_image_config(hid_t plist_id, H5AC_cache_image_config_t *config_ptr);
extern herr_t H5Pset_page_buffer_size(hid_t plist_id, size_t buf_size, unsigned min_meta_per,
                                      unsigned min_raw_per);
extern herr_t H5Pfill_value_defined(hid_t plist, H5D_fill_value_t *status);
extern herr_t H5Pget_alloc_time(hid_t plist_id, H5D_alloc_time_t *alloc_time );
extern int H5Pget_chunk(hid_t plist_id, int max_ndims, hsize_t dim[] );
extern herr_t H5Pget_chunk_opts(hid_t plist_id, unsigned *opts);
extern herr_t H5Pget_dset_no_attrs_hint(hid_t dcpl_id, hbool_t *minimize);
extern herr_t H5Pget_external(hid_t plist_id, unsigned idx, size_t name_size, char *name ,
                              off_t *offset , hsize_t *size );
extern int H5Pget_external_count(hid_t plist_id);
extern herr_t H5Pget_fill_time(hid_t plist_id, H5D_fill_time_t *fill_time );
extern herr_t H5Pget_fill_value(hid_t plist_id, hid_t type_id, void *value );
extern H5D_layout_t H5Pget_layout(hid_t plist_id);
extern herr_t H5Pget_virtual_count(hid_t dcpl_id, size_t *count );
extern ssize_t H5Pget_virtual_dsetname(hid_t dcpl_id, size_t index, char *name , size_t size);
extern ssize_t H5Pget_virtual_filename(hid_t dcpl_id, size_t index, char *name , size_t size);
extern hid_t H5Pget_virtual_srcspace(hid_t dcpl_id, size_t index);
extern hid_t H5Pget_virtual_vspace(hid_t dcpl_id, size_t index);
extern herr_t H5Pset_alloc_time(hid_t plist_id, H5D_alloc_time_t alloc_time);
extern herr_t H5Pset_chunk(hid_t plist_id, int ndims, const hsize_t dim[]);
extern herr_t H5Pset_chunk_opts(hid_t plist_id, unsigned opts);
extern herr_t H5Pset_dset_no_attrs_hint(hid_t dcpl_id, hbool_t minimize);
extern herr_t H5Pset_external(hid_t plist_id, const char *name, off_t offset, hsize_t size);
extern herr_t H5Pset_fill_time(hid_t plist_id, H5D_fill_time_t fill_time);
extern herr_t H5Pset_fill_value(hid_t plist_id, hid_t type_id, const void *value);
extern herr_t H5Pset_shuffle(hid_t plist_id);
extern herr_t H5Pset_layout(hid_t plist_id, H5D_layout_t layout);
extern herr_t H5Pset_nbit(hid_t plist_id);
extern herr_t H5Pset_scaleoffset(hid_t plist_id, H5Z_SO_scale_type_t scale_type, int scale_factor);
extern herr_t H5Pset_szip(hid_t plist_id, unsigned options_mask, unsigned pixels_per_block);
extern herr_t H5Pset_virtual(hid_t dcpl_id, hid_t vspace_id, const char *src_file_name,
                             const char *src_dset_name, hid_t src_space_id);
extern herr_t H5Pget_append_flush(hid_t dapl_id, unsigned dims, hsize_t boundary[], H5D_append_cb_t *func,
                                  void **udata);
extern herr_t H5Pget_chunk_cache(hid_t dapl_id, size_t *rdcc_nslots , size_t *rdcc_nbytes ,
                                 double *rdcc_w0 );
extern ssize_t H5Pget_efile_prefix(hid_t dapl_id, char *prefix , size_t size);
extern ssize_t H5Pget_virtual_prefix(hid_t dapl_id, char *prefix , size_t size);
extern herr_t H5Pget_virtual_printf_gap(hid_t dapl_id, hsize_t *gap_size);
extern herr_t H5Pget_virtual_view(hid_t dapl_id, H5D_vds_view_t *view);
extern herr_t H5Pset_append_flush(hid_t dapl_id, unsigned ndims, const hsize_t boundary[],
                                  H5D_append_cb_t func, void *udata);
extern herr_t H5Pset_chunk_cache(hid_t dapl_id, size_t rdcc_nslots, size_t rdcc_nbytes, double rdcc_w0);
extern herr_t H5Pset_efile_prefix(hid_t dapl_id, const char *prefix);
extern herr_t H5Pset_virtual_prefix(hid_t dapl_id, const char *prefix);
extern herr_t H5Pset_virtual_printf_gap(hid_t dapl_id, hsize_t gap_size);
extern herr_t H5Pset_virtual_view(hid_t dapl_id, H5D_vds_view_t view);
extern herr_t H5Pget_btree_ratios(hid_t plist_id, double *left , double *middle ,
                                  double *right );
extern size_t H5Pget_buffer(hid_t plist_id, void **tconv , void **bkg );
extern ssize_t H5Pget_data_transform(hid_t plist_id, char *expression , size_t size);
extern H5Z_EDC_t H5Pget_edc_check(hid_t plist_id);
extern herr_t H5Pget_hyper_vector_size(hid_t fapl_id, size_t *size );
extern int H5Pget_preserve(hid_t plist_id);
extern herr_t H5Pget_type_conv_cb(hid_t dxpl_id, H5T_conv_except_func_t *op, void **operate_data);
extern herr_t H5Pget_vlen_mem_manager(hid_t plist_id, H5MM_allocate_t *alloc_func, void **alloc_info,
                                      H5MM_free_t *free_func, void **free_info);
extern herr_t H5Pset_btree_ratios(hid_t plist_id, double left, double middle, double right);
extern herr_t H5Pset_buffer(hid_t plist_id, size_t size, void *tconv, void *bkg);
extern herr_t H5Pset_data_transform(hid_t plist_id, const char *expression);
extern herr_t H5Pset_edc_check(hid_t plist_id, H5Z_EDC_t check);
extern herr_t H5Pset_filter_callback(hid_t plist_id, H5Z_filter_func_t func, void *op_data);
extern herr_t H5Pset_hyper_vector_size(hid_t plist_id, size_t size);
extern herr_t H5Pset_preserve(hid_t plist_id, hbool_t status);
extern herr_t H5Pset_type_conv_cb(hid_t dxpl_id, H5T_conv_except_func_t op, void *operate_data);
extern herr_t H5Pset_vlen_mem_manager(hid_t plist_id, H5MM_allocate_t alloc_func, void *alloc_info,
                                      H5MM_free_t free_func, void *free_info);
extern herr_t H5Pget_mpio_actual_chunk_opt_mode(hid_t                             plist_id,
                                                H5D_mpio_actual_chunk_opt_mode_t *actual_chunk_opt_mode);
extern herr_t H5Pget_mpio_actual_io_mode(hid_t plist_id, H5D_mpio_actual_io_mode_t *actual_io_mode);
extern herr_t H5Pget_mpio_no_collective_cause(hid_t plist_id, uint32_t *local_no_collective_cause,
                                              uint32_t *global_no_collective_cause);
extern herr_t H5Pget_create_intermediate_group(hid_t plist_id, unsigned *crt_intmd );
extern herr_t H5Pset_create_intermediate_group(hid_t plist_id, unsigned crt_intmd);
extern herr_t H5Pget_est_link_info(hid_t plist_id, unsigned *est_num_entries ,
                                   unsigned *est_name_len );
extern herr_t H5Pget_link_creation_order(hid_t plist_id, unsigned *crt_order_flags );
extern herr_t H5Pget_link_phase_change(hid_t plist_id, unsigned *max_compact ,
                                       unsigned *min_dense );
extern herr_t H5Pget_local_heap_size_hint(hid_t plist_id, size_t *size_hint );
extern herr_t H5Pset_est_link_info(hid_t plist_id, unsigned est_num_entries, unsigned est_name_len);
extern herr_t H5Pset_link_creation_order(hid_t plist_id, unsigned crt_order_flags);
extern herr_t H5Pset_link_phase_change(hid_t plist_id, unsigned max_compact, unsigned min_dense);
extern herr_t H5Pset_local_heap_size_hint(hid_t plist_id, size_t size_hint);
extern herr_t H5Pget_char_encoding(hid_t plist_id, H5T_cset_t *encoding );
extern herr_t H5Pset_char_encoding(hid_t plist_id, H5T_cset_t encoding);
extern herr_t H5Pget_elink_acc_flags(hid_t lapl_id, unsigned *flags);
extern herr_t H5Pget_elink_cb(hid_t lapl_id, H5L_elink_traverse_t *func, void **op_data);
extern hid_t H5Pget_elink_fapl(hid_t lapl_id);
extern ssize_t H5Pget_elink_prefix(hid_t plist_id, char *prefix, size_t size);
extern herr_t H5Pget_nlinks(hid_t plist_id, size_t *nlinks);
extern herr_t H5Pset_elink_acc_flags(hid_t lapl_id, unsigned flags);
extern herr_t H5Pset_elink_cb(hid_t lapl_id, H5L_elink_traverse_t func, void *op_data);
extern herr_t H5Pset_elink_fapl(hid_t lapl_id, hid_t fapl_id);
extern herr_t H5Pset_elink_prefix(hid_t plist_id, const char *prefix);
extern herr_t H5Pset_nlinks(hid_t plist_id, size_t nlinks);
extern herr_t H5Padd_merge_committed_dtype_path(hid_t plist_id, const char *path);
extern herr_t H5Pfree_merge_committed_dtype_paths(hid_t plist_id);
extern herr_t H5Pget_copy_object(hid_t plist_id, unsigned *copy_options );
extern herr_t H5Pget_mcdt_search_cb(hid_t plist_id, H5O_mcdt_search_cb_t *func, void **op_data);
extern herr_t H5Pset_copy_object(hid_t plist_id, unsigned copy_options);