Packages_2024/hdf5_1.10.10/hdf5/H5Ppublic.inc

function H5Pset_meta_block_size(fapl_id: Thid_t; size: Thsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_metadata_read_attempts(plist_id: Thid_t; attempts: dword): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_multi_type(fapl_id: Thid_t; _type: TH5FD_mem_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_object_flush_cb(plist_id: Thid_t; func: TH5F_flush_cb_t; udata: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_sieve_buf_size(fapl_id: Thid_t; size: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_small_data_block_size(fapl_id: Thid_t; size: Thsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_all_coll_metadata_ops(plist_id: Thid_t; is_collective: Thbool_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_all_coll_metadata_ops(plist_id: Thid_t; is_collective: Phbool_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_coll_metadata_write(plist_id: Thid_t; is_collective: Thbool_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_coll_metadata_write(plist_id: Thid_t; is_collective: Phbool_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_mdc_image_config(plist_id: Thid_t; config_ptr: PH5AC_cache_image_config_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_page_buffer_size(plist_id: Thid_t; buf_size: Tsize_t; min_meta_per: dword; min_raw_per: dword): Therr_t; cdecl; external libhdf5_serial;
function H5Pfill_value_defined(plist: Thid_t; status: PH5D_fill_value_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_alloc_time(plist_id: Thid_t; alloc_time: PH5D_alloc_time_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_chunk(plist_id: Thid_t; max_ndims: longint; dim: Phsize_t): longint; cdecl; external libhdf5_serial;
function H5Pget_chunk_opts(plist_id: Thid_t; opts: Pdword): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_dset_no_attrs_hint(dcpl_id: Thid_t; minimize: Phbool_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_external(plist_id: Thid_t; idx: dword; name_size: Tsize_t; name: pchar; offset: Poff_t; size: Phsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_external_count(plist_id: Thid_t): longint; cdecl; external libhdf5_serial;
function H5Pget_fill_time(plist_id: Thid_t; fill_time: PH5D_fill_time_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_fill_value(plist_id: Thid_t; type_id: Thid_t; value: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_layout(plist_id: Thid_t): TH5D_layout_t; cdecl; external libhdf5_serial;
function H5Pget_virtual_count(dcpl_id: Thid_t; count: Psize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_virtual_dsetname(dcpl_id: Thid_t; index: Tsize_t; name: pchar; size: Tsize_t): Tssize_t; cdecl; external libhdf5_serial;
function H5Pget_virtual_filename(dcpl_id: Thid_t; index: Tsize_t; name: pchar; size: Tsize_t): Tssize_t; cdecl; external libhdf5_serial;
function H5Pget_virtual_srcspace(dcpl_id: Thid_t; index: Tsize_t): Thid_t; cdecl; external libhdf5_serial;
function H5Pget_virtual_vspace(dcpl_id: Thid_t; index: Tsize_t): Thid_t; cdecl; external libhdf5_serial;
function H5Pset_alloc_time(plist_id: Thid_t; alloc_time: TH5D_alloc_time_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_chunk(plist_id: Thid_t; ndims: longint; dim: Phsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_chunk_opts(plist_id: Thid_t; opts: dword): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_dset_no_attrs_hint(dcpl_id: Thid_t; minimize: Thbool_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_external(plist_id: Thid_t; name: pchar; offset: Toff_t; size: Thsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_fill_time(plist_id: Thid_t; fill_time: TH5D_fill_time_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_fill_value(plist_id: Thid_t; type_id: Thid_t; value: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_shuffle(plist_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_layout(plist_id: Thid_t; layout: TH5D_layout_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_nbit(plist_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_scaleoffset(plist_id: Thid_t; scale_type: TH5Z_SO_scale_type_t; scale_factor: longint): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_szip(plist_id: Thid_t; options_mask: dword; pixels_per_block: dword): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_virtual(dcpl_id: Thid_t; vspace_id: Thid_t; src_file_name: pchar; src_dset_name: pchar; src_space_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_append_flush(dapl_id: Thid_t; dims: dword; boundary: Phsize_t; func: PH5D_append_cb_t; udata: Ppointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_chunk_cache(dapl_id: Thid_t; rdcc_nslots: Psize_t; rdcc_nbytes: Psize_t; rdcc_w0: Pdouble): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_efile_prefix(dapl_id: Thid_t; prefix: pchar; size: Tsize_t): Tssize_t; cdecl; external libhdf5_serial;
function H5Pget_virtual_prefix(dapl_id: Thid_t; prefix: pchar; size: Tsize_t): Tssize_t; cdecl; external libhdf5_serial;
function H5Pget_virtual_printf_gap(dapl_id: Thid_t; gap_size: Phsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_virtual_view(dapl_id: Thid_t; view: PH5D_vds_view_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_append_flush(dapl_id: Thid_t; ndims: dword; boundary: Phsize_t; func: TH5D_append_cb_t; udata: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_chunk_cache(dapl_id: Thid_t; rdcc_nslots: Tsize_t; rdcc_nbytes: Tsize_t; rdcc_w0: Tdouble): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_efile_prefix(dapl_id: Thid_t; prefix: pchar): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_virtual_prefix(dapl_id: Thid_t; prefix: pchar): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_virtual_printf_gap(dapl_id: Thid_t; gap_size: Thsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_virtual_view(dapl_id: Thid_t; view: TH5D_vds_view_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_btree_ratios(plist_id: Thid_t; left: Pdouble; middle: Pdouble; right: Pdouble): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_buffer(plist_id: Thid_t; tconv: Ppointer; bkg: Ppointer): Tsize_t; cdecl; external libhdf5_serial;
function H5Pget_data_transform(plist_id: Thid_t; expression: pchar; size: Tsize_t): Tssize_t; cdecl; external libhdf5_serial;
function H5Pget_edc_check(plist_id: Thid_t): TH5Z_EDC_t; cdecl; external libhdf5_serial;
function H5Pget_hyper_vector_size(fapl_id: Thid_t; size: Psize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_preserve(plist_id: Thid_t): longint; cdecl; external libhdf5_serial;
function H5Pget_type_conv_cb(dxpl_id: Thid_t; op: PH5T_conv_except_func_t; operate_data: Ppointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_vlen_mem_manager(plist_id: Thid_t; alloc_func: PH5MM_allocate_t; alloc_info: Ppointer; free_func: PH5MM_free_t; free_info: Ppointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_btree_ratios(plist_id: Thid_t; left: Tdouble; middle: Tdouble; right: Tdouble): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_buffer(plist_id: Thid_t; size: Tsize_t; tconv: pointer; bkg: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_data_transform(plist_id: Thid_t; expression: pchar): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_edc_check(plist_id: Thid_t; check: TH5Z_EDC_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_filter_callback(plist_id: Thid_t; func: TH5Z_filter_func_t; op_data: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_hyper_vector_size(plist_id: Thid_t; size: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_preserve(plist_id: Thid_t; status: Thbool_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_type_conv_cb(dxpl_id: Thid_t; op: TH5T_conv_except_func_t; operate_data: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_vlen_mem_manager(plist_id: Thid_t; alloc_func: TH5MM_allocate_t; alloc_info: pointer; free_func: TH5MM_free_t; free_info: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_mpio_actual_chunk_opt_mode(plist_id: Thid_t; actual_chunk_opt_mode: PH5D_mpio_actual_chunk_opt_mode_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_mpio_actual_io_mode(plist_id: Thid_t; actual_io_mode: PH5D_mpio_actual_io_mode_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_mpio_no_collective_cause(plist_id: Thid_t; local_no_collective_cause: Puint32_t; global_no_collective_cause: Puint32_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_create_intermediate_group(plist_id: Thid_t; crt_intmd: Pdword): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_create_intermediate_group(plist_id: Thid_t; crt_intmd: dword): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_est_link_info(plist_id: Thid_t; est_num_entries: Pdword; est_name_len: Pdword): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_link_creation_order(plist_id: Thid_t; crt_order_flags: Pdword): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_link_phase_change(plist_id: Thid_t; max_compact: Pdword; min_dense: Pdword): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_local_heap_size_hint(plist_id: Thid_t; size_hint: Psize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_est_link_info(plist_id: Thid_t; est_num_entries: dword; est_name_len: dword): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_link_creation_order(plist_id: Thid_t; crt_order_flags: dword): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_link_phase_change(plist_id: Thid_t; max_compact: dword; min_dense: dword): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_local_heap_size_hint(plist_id: Thid_t; size_hint: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_char_encoding(plist_id: Thid_t; encoding: PH5T_cset_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_char_encoding(plist_id: Thid_t; encoding: TH5T_cset_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_elink_acc_flags(lapl_id: Thid_t; flags: Pdword): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_elink_cb(lapl_id: Thid_t; func: PH5L_elink_traverse_t; op_data: Ppointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_elink_fapl(lapl_id: Thid_t): Thid_t; cdecl; external libhdf5_serial;
function H5Pget_elink_prefix(plist_id: Thid_t; prefix: pchar; size: Tsize_t): Tssize_t; cdecl; external libhdf5_serial;
function H5Pget_nlinks(plist_id: Thid_t; nlinks: Psize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_elink_acc_flags(lapl_id: Thid_t; flags: dword): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_elink_cb(lapl_id: Thid_t; func: TH5L_elink_traverse_t; op_data: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_elink_fapl(lapl_id: Thid_t; fapl_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_elink_prefix(plist_id: Thid_t; prefix: pchar): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_nlinks(plist_id: Thid_t; nlinks: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Padd_merge_committed_dtype_path(plist_id: Thid_t; path: pchar): Therr_t; cdecl; external libhdf5_serial;
function H5Pfree_merge_committed_dtype_paths(plist_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_copy_object(plist_id: Thid_t; copy_options: Pdword): Therr_t; cdecl; external libhdf5_serial;
function H5Pget_mcdt_search_cb(plist_id: Thid_t; func: PH5O_mcdt_search_cb_t; op_data: Ppointer): Therr_t; cdecl; external libhdf5_serial;
function H5Pset_copy_object(plist_id: Thid_t; copy_options: dword): Therr_t; cdecl; external libhdf5_serial;
